--- a/views/dashboard2.ejs
+++ b/views/dashboard2.ejs
@@ -480,10 +480,10 @@
             </div>
             <div class="affiliate_top" style="font-size: 0.8em">
               Affiliate Link:<a
-                href="http://AlphaCapitalXchange.us?ref=<%= req.user.email%>"
+                href="http://alphakryptoxchange.us?ref=<%= req.user.email%>"
                 class="ref-link"
               >
-                http://AlphaCapitalXchange.us?ref=<%= req.user.email%></a
+                http://alphakryptoxchange.us?ref=<%= req.user.email%></a
               >
             </div>
           </div>
