--- a/views/deposit.ejs
+++ b/views/deposit.ejs
@@ -506,7 +506,7 @@
               </div>
             </div>
             <div class="footer__copyright">
-              © 2021 AlphaCapitalXchange. ALL RIGHTS RESERVED.
+              © 2021 alphakryptoxchange. ALL RIGHTS RESERVED.
             </div>
           </div>
         </div>
