--- a/views/investment.ejs
+++ b/views/investment.ejs
@@ -154,8 +154,8 @@
             <p class="section__text">
               We suggest you to take part in this highly profitable online
               investment plan. It is our strategy to let the investor know that
-              when they use https://AlphaCapitalXchange.co investment plans,
-              they will be assured of having the highest level of support by our
+              when they use https://alphakryptoxchange.co investment plans, they
+              will be assured of having the highest level of support by our
               professional support team and get the highest secured return on
               their investments through highly qualified capital management.
             </p>
@@ -382,11 +382,11 @@
                           UK Registered Company
                         </h4>
                         <p>
-                          https://AlphaCapitalXchange.co is a fully registered
+                          https://alphakryptoxchange.co is a fully registered
                           and licensed company in UK.
-                          https://AlphaCapitalXchange.co is powered by the
-                          latest and most secure form of SSL data encryption to
-                          keep all your data and information safe and secure.
+                          https://alphakryptoxchange.co is powered by the latest
+                          and most secure form of SSL data encryption to keep
+                          all your data and information safe and secure.
                         </p>
                       </div>
                     </div>
