--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -496,8 +496,8 @@
                           UK Registered Company
                         </h4>
                         <p>
-                          AlphaCapitalXchange is a fully registered and licensed
-                          company in UK. AlphaCapitalXchange is powered by the
+                          alphakryptoxchange is a fully registered and licensed
+                          company in UK. alphakryptoxchange is powered by the
                           latest and most secure form of SSL data encryption to
                           keep all your data and information safe and secure.
                         </p>
@@ -552,7 +552,7 @@
               </div>
             </div>
             <div class="footer__copyright">
-              © 2021 AlphaCapitalXchange. ALL RIGHTS RESERVED.
+              © 2021 alphakryptoxchange. ALL RIGHTS RESERVED.
             </div>
           </div>
         </div>
