--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -10,7 +10,7 @@
     <meta name="keywords" content="au theme template">
 
     <!-- Title Page-->
-    <title>Dashboard | AlphaCapitalXchange</title>
+    <title>Dashboard | alphakryptoxchange</title>
 
     <!-- Fontfaces CSS-->
     <link href="/css/font-face.css" rel="stylesheet" media="all">
@@ -269,7 +269,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="copyright">
-                                <p>Copyright © 2021 AlphaCapitalXchange.</p>
+                                <p>Copyright © 2021 alphakryptoxchange.</p>
                             </div>
                         </div>
                     </div>
