--- a/views/deposits.ejs
+++ b/views/deposits.ejs
@@ -223,7 +223,7 @@
                                         <img src="/assets/img/uk.png">
                                         <h4 class="step__title" style="padding-bottom: 15px;color:#facd8a;">UK
                                             Registered Company</h4>
-                                        <p>AlphaCapitalXchange is a fully registered and licensed company in UK. AlphaCapitalXchange
+                                        <p>alphakryptoxchange is a fully registered and licensed company in UK. alphakryptoxchange
                                             is powered by the latest and most secure form of SSL data encryption to keep
                                             all your data and information safe and secure.</p>
                                     </div>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="footer__copyright">
-                    © 2021 AlphaCapitalXchange ALL RIGHTS RESERVED.
+                    © 2021 alphakryptoxchange ALL RIGHTS RESERVED.
                 </div>
             </div>
         </div>
