--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
             <div class="header__content">
               <h1 class="header__h1">Providing the stable income 10% daily</h1>
               <p class="header__text">
-                AlphaCapitalXchange is an innovative company engaged <br />in
+                alphakryptoxchange is an innovative company engaged <br />in
                 investments in gold and provide the stable income 10% daily.
               </p>
               <a href="/signup" class="btn btn-warning header__btn" data-pjax>
@@ -238,26 +238,25 @@
         <div class="row">
           <div class="col-md-6 col-lg-7">
             <div class="section-home__title">
-              <h2 class="section__h2">Why did we choose AlphaCapitalXchange</h2>
+              <h2 class="section__h2">Why did we choose alphakryptoxchange</h2>
               <h3 class="section__h3"></h3>
             </div>
             <p class="section__text">
-              AlphaCapitalXchange is a legally registered Private Limited
-              Company which was founded and transformed into an open joint-stock
-              company in order to provide access for everyone to financial
-              products offered by AlphaCapitalXchange. The investment management
-              potential created by the professionals working with the Company
-              had been the underlying reason of the transformation. Since
-              AlphaCapitalXchange has demonstrated outstanding performance and
-              significantly expanded its assets in the previous period, the
-              decision was made to start offering its investment products via
-              specialized online services. The Company is not a member,
-              associate or subdivision of any other organization, so it is free
-              to make totally independent decisions. Our team of full-time
-              financial experts ensures effective and quick analysis of the
-              current financial situation. Our mission is to provide every
-              person the opportunity to gain maximal profit from investing at
-              minimal risk..
+              alphakryptoxchange is a legally registered Private Limited Company
+              which was founded and transformed into an open joint-stock company
+              in order to provide access for everyone to financial products
+              offered by alphakryptoxchange. The investment management potential
+              created by the professionals working with the Company had been the
+              underlying reason of the transformation. Since alphakryptoxchange
+              has demonstrated outstanding performance and significantly
+              expanded its assets in the previous period, the decision was made
+              to start offering its investment products via specialized online
+              services. The Company is not a member, associate or subdivision of
+              any other organization, so it is free to make totally independent
+              decisions. Our team of full-time financial experts ensures
+              effective and quick analysis of the current financial situation.
+              Our mission is to provide every person the opportunity to gain
+              maximal profit from investing at minimal risk..
             </p>
             <a
               href="indexe47ee47e.html?a=about"
@@ -581,7 +580,7 @@
           <div class="col-md-12 section__title">
             <h2 class="section__h2">How it works</h2>
             <h3 class="section__h3">
-              At every step, the AlphaCapitalXchange provides you with an
+              At every step, the alphakryptoxchange provides you with an
               affordable and easy-to-use way even for beginners.
             </h3>
           </div>
@@ -607,7 +606,7 @@
 									Create account
 								</h4> -->
                       <div class="step__content">
-                        I want to thank AlphaCapitalXchange, I just received my
+                        I want to thank alphakryptoxchange, I just received my
                         profit of $15, 000 from my investments. <br />My whole
                         family is indeed happy. I'm hoping to invest big next
                         week
@@ -626,7 +625,7 @@
 								</h4> -->
                       <div class="step__content">
                         Thank you so much. I just received my first $20k. Thank
-                        you AlphaCapitalXchange.
+                        you alphakryptoxchange.
                       </div>
                     </div>
                   </div>
@@ -642,7 +641,7 @@
 								</h4> -->
                       <div class="step__content">
                         You Guys are amazing! Thank you for now i'm financially
-                        stable. AlphaCapitalXchange is the best
+                        stable. alphakryptoxchange is the best
                       </div>
                     </div>
                   </div>
@@ -662,14 +661,14 @@
           </div>
           <div class="col-md-6">
             <p class="section__text">
-              At AlphaCapitalXchange, we believe that advertising about our
+              At alphakryptoxchange, we believe that advertising about our
               services by our satisfied clients is the best way to grow
-              business. Keeping this in mind, AlphaCapitalXchange founded an
+              business. Keeping this in mind, alphakryptoxchange founded an
               amazing lucrative reward in terms of two level affiliate program.
             </p>
             <br />
             <p class="section__text">
-              AlphaCapitalXchange is paying for the popularization of its
+              alphakryptoxchange is paying for the popularization of its
               investment program and anyone can be rewarded. To benefit from
               this, you have to refer your friends, relatives and colleagues in
               your network through a referral link. You can earn on our
@@ -698,7 +697,7 @@
           <div class="col-md-12 section__title">
             <h2 class="section__h2">How it works</h2>
             <h3 class="section__h3">
-              At every step, the AlphaCapitalXchange provides you with an
+              At every step, the alphakryptoxchange provides you with an
               affordable and easy-to-use way even for beginners.
             </h3>
           </div>
@@ -725,9 +724,9 @@
                     <div class="step__body">
                       <h4 class="step__title">Create account</h4>
                       <div class="step__content">
-                        Open a free account with AlphaCapitalXchange by simply
+                        Open a free account with alphakryptoxchange by simply
                         click on "Register". Complete the form and click submit.
-                        <br />Your account with AlphaCapitalXchange will be
+                        <br />Your account with alphakryptoxchange will be
                         active.
                       </div>
                     </div>
@@ -821,8 +820,8 @@
                           UK Registered Company
                         </h4>
                         <p>
-                          AlphaCapitalXchange is a fully registered and licensed
-                          company in UK. AlphaCapitalXchange is powered by the
+                          alphakryptoxchange is a fully registered and licensed
+                          company in UK. alphakryptoxchange is powered by the
                           latest and most secure form of SSL data encryption to
                           keep all your data and information safe and secure.
                         </p>
@@ -880,7 +879,7 @@
               </div>
             </div>
             <div class="footer__copyright">
-              © 2021 AlphaCapitalXchange. ALL RIGHTS RESERVED.
+              © 2021 alphakryptoxchange. ALL RIGHTS RESERVED.
             </div>
           </div>
         </div>
