--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title><%=pageTitle%> | AlphaCapitalXchange</title>
+    <title><%=pageTitle%> | alphakryptoxchange</title>
     <link
       rel="shortcut icon"
       href="/assets/img/favicon/favicon.png"
