--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
                       <a href="/" class="logo" data-pjax="">
                         <img
                           src="/assets/img/logo-img.svg"
-                          alt="AlphaCapitalXchange"
+                          alt="alphakryptoxchange"
                           style="width: 180px"
                         />
                       </a>
