--- a/views/support.ejs
+++ b/views/support.ejs
@@ -234,12 +234,12 @@
               messages send on our e-mail!
             </p>
             <a
-              href="mailto:support@AlphaCapitalXchange.co"
+              href="mailto:support@alphakryptoxchange.co"
               class="contact section-contact__contact"
               target="_blank"
             >
               <img src="/assets/img/icons/mail.png" alt="" />
-              <span style="color: #facd8a">support@AlphaCapitalXchange.co</span>
+              <span style="color: #facd8a">support@alphakryptoxchange.co</span>
             </a>
           </div>
         </div>
@@ -272,8 +272,8 @@
                           UK Registered Company
                         </h4>
                         <p>
-                          AlphaCapitalXchange is a fully registered and licensed
-                          company in UK. AlphaCapitalXchange is powered by the
+                          alphakryptoxchange is a fully registered and licensed
+                          company in UK. alphakryptoxchange is powered by the
                           latest and most secure form of SSL data encryption to
                           keep all your data and information safe and secure.
                         </p>
@@ -328,7 +328,7 @@
               </div>
             </div>
             <div class="footer__copyright">
-              © 2020 AlphaCapitalXchange ALL RIGHTS RESERVED.
+              © 2020 alphakryptoxchange ALL RIGHTS RESERVED.
             </div>
           </div>
         </div>
