--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -139,17 +139,17 @@
           <div class="col-md-12">
             <p class="section__text">
               This user agreement (the Agreement) describes the terms and
-              conditions of using the services provided by AlphaCapitalXchange
-              to the registered user (Client), including the access to the
-              personal account and payment operations performed through the
-              AlphaCapitalXchange website located at AlphaCapitalXchange.
-              <br />Using AlphaCapitalXchange services, you confirm that you
-              have read this Agreement, understood its meaning in full and
-              accept this Agreement. <br />All interested parties are required
-              to read all that is written and stated on this page without
-              skipping even a single word. This acts as the official and binding
-              terms and conditions between You the registrant and our company
-              AlphaCapitalXchange. <br />Prior to registration, all interested
+              conditions of using the services provided by alphakryptoxchange to
+              the registered user (Client), including the access to the personal
+              account and payment operations performed through the
+              alphakryptoxchange website located at alphakryptoxchange.
+              <br />Using alphakryptoxchange services, you confirm that you have
+              read this Agreement, understood its meaning in full and accept
+              this Agreement. <br />All interested parties are required to read
+              all that is written and stated on this page without skipping even
+              a single word. This acts as the official and binding terms and
+              conditions between You the registrant and our company
+              alphakryptoxchange. <br />Prior to registration, all interested
               registrants understand that upon registration, you shall be bound
               by these terms and conditions without negotiations. If you are not
               ready to accept the terms written herewith, please do not register
@@ -164,15 +164,15 @@
               worries. <br />All registrants must use a valid e-mail address in
               order for us to be able to communicate properly when issues arise
               out of misuse or technical reasons. <br />When registering, you
-              hold AlphaCapitalXchange free from any liabilities and losses you
+              hold alphakryptoxchange free from any liabilities and losses you
               may incur in the circumstances unforeseen, such as account
               compromise, suspension, and or deletion, due to reasons caused by
-              the registrant. <br />AlphaCapitalXchange services are not
+              the registrant. <br />alphakryptoxchange services are not
               available to the general public and are opened only to the
-              qualified members of AlphaCapitalXchange, the use of this site is
+              qualified members of alphakryptoxchange, the use of this site is
               restricted to our members and to individuals personally invited by
               them. Every deposit is considered to be a private transaction
-              between the AlphaCapitalXchange and its Member. <br />We reserve
+              between the alphakryptoxchange and its Member. <br />We reserve
               the rights to decline, reject and reverse deposits back to the
               depositor for reasons we may either disclose publicly or not, and
               for whatever reason we deem necessary for the better performance
@@ -194,12 +194,12 @@
               any such jurisdiction and that you will not use any Services while
               located in any such jurisdiction. You also may not use the
               Services if you are located in, or a citizen or resident of, any
-              other jurisdiction where AlphaCapitalXchange has determined, at
-              its discretion, to prohibit use of the Services (USA etc.).
-              AlphaCapitalXchange may implement controls to restrict access to
+              other jurisdiction where alphakryptoxchange has determined, at its
+              discretion, to prohibit use of the Services (USA etc.).
+              alphakryptoxchange may implement controls to restrict access to
               the Services from any jurisdiction prohibited pursuant to this
               Section. You will comply with this Section, even if
-              AlphaCapitalXchange methods to prevent use of the Services are not
+              alphakryptoxchange methods to prevent use of the Services are not
               effective or can be bypassed. <br />We reserve the right to use
               “geo-blocking”, that is, we may block by IP-address the visitors
               that arrive from the US. Any resident or citizen of the United
@@ -242,7 +242,7 @@
               PerfectMoney, Blockhain.info, Cryptonator, Coinomi etc), as well
               as transaction delays due to their fault; <br />- viruses caused
               by third parties; <br />- errors on the Site or with the
-              AlphaCapitalXchange Online Service caused by incomplete or
+              alphakryptoxchange Online Service caused by incomplete or
               incorrect information provided to us by you or a third party;
               <br />- any unauthorised use or interception of any message or
               information before it reaches the Site; <br />- any unauthorised
@@ -251,7 +251,7 @@
               negligence, fraud or failure to comply with laws relating to the
               protection of your data); We have no obligation to you to initiate
               or perform a money transfer or other transaction as part of the
-              AlphaCapitalXchange Online Service if: <br />- we are unable to
+              alphakryptoxchange Online Service if: <br />- we are unable to
               obtain satisfactory evidence of your identity; <br />- we have
               reason to believe that the transaction message is incorrect,
               unauthorized or forged; <br />- you provide us with incorrect or
@@ -263,21 +263,21 @@
               accept any liability for damages resulting from 3rd party
               non-payment or delay in payment of a money transfer to our
               internal accounts or failure to perform a transaction under the
-              AlphaCapitalXchange Online Service by reason of any of these
+              alphakryptoxchange Online Service by reason of any of these
               matters. If you received payment for advertising / listing from
               our official wallet, which provides for a certain amount of
               reinvest in the project, it means that you do not can close the
               deposit and withdraw all funds including deposit, you can only
               withdraw daily income 5% from the deposit, otherwise we are
               entitled to suspend payments to you. We may refuse to provide the
-              AlphaCapitalXchange Online Service (in whole or in part) to you if
-              to do so may breach any AlphaCapitalXchange policy (including
+              alphakryptoxchange Online Service (in whole or in part) to you if
+              to do so may breach any alphakryptoxchange policy (including
               policies intended to prevent fraud, money laundering or terrorist
               financing) and/or any applicable law, order of a court or
               requirement of any regulatory or governmental authority, body or
               agency having jurisdiction over us, or if we otherwise consider
               such action necessary to protect our interests. <br />We may
-              suspend the operation of the AlphaCapitalXchange Online Service in
+              suspend the operation of the alphakryptoxchange Online Service in
               whole or in part if, in our absolute discretion, we consider it
               appropriate to do so by reason of any circumstances beyond our
               control. We shall not be liable to you for any loss or liability
@@ -315,8 +315,8 @@
                           UK Registered Company
                         </h4>
                         <p>
-                          AlphaCapitalXchange is a fully registered and licensed
-                          company in UK. AlphaCapitalXchange is powered by the
+                          alphakryptoxchange is a fully registered and licensed
+                          company in UK. alphakryptoxchange is powered by the
                           latest and most secure form of SSL data encryption to
                           keep all your data and information safe and secure.
                         </p>
