--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,10 +38,22 @@
 
   <body>
     <%-body%>
-    <script
-      src="//code.tidio.co/zf0kkwpf8dij6jq54n6tpsezf2v29r84.js"
-      async
-    ></script>
+    <!-- Chatra {literal} -->
+    <script>
+      (function (d, w, c) {
+        w.ChatraID = "p65tmczpifoJJotZt";
+        var s = d.createElement("script");
+        w[c] =
+          w[c] ||
+          function () {
+            (w[c].q = w[c].q || []).push(arguments);
+          };
+        s.async = true;
+        s.src = "https://call.chatra.io/chatra.js";
+        if (d.head) d.head.appendChild(s);
+      })(document, window, "Chatra");
+    </script>
+    <!-- /Chatra {/literal} -->
     <!-- <script src="//code.tidio.co/dsponakqmybwbsxnxacw708n8lsztiaz.js" async></script> -->
     <!-- <script src="//code.tidio.co/yikkcfjemofj4j4djuhrwud0yr8zyhdh.js" async></script> -->
     <!-- Begin of Chaport Live Chat code -->
