--- a/views/dashboard2.ejs
+++ b/views/dashboard2.ejs
@@ -797,10 +797,22 @@
       });
     </script>
 
-    <script
-      src="//code.tidio.co/zf0kkwpf8dij6jq54n6tpsezf2v29r84.js"
-      async
-    ></script>
+    <!-- Chatra {literal} -->
+    <script>
+      (function (d, w, c) {
+        w.ChatraID = "p65tmczpifoJJotZt";
+        var s = d.createElement("script");
+        w[c] =
+          w[c] ||
+          function () {
+            (w[c].q = w[c].q || []).push(arguments);
+          };
+        s.async = true;
+        s.src = "https://call.chatra.io/chatra.js";
+        if (d.head) d.head.appendChild(s);
+      })(document, window, "Chatra");
+    </script>
+    <!-- /Chatra {/literal} -->
 
     <!-- <script
       src="//code.tidio.co/ufuwp4kjhnwpwohn3uv1blddiwivkkor.js"
