--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,18 +1,7 @@
-<!-- Chatra {literal} -->
-<script>
-  (function (d, w, c) {
-    w.ChatraID = "p65tmczpifoJJotZt";
-    var s = d.createElement("script");
-    w[c] =
-      w[c] ||
-      function () {
-        (w[c].q = w[c].q || []).push(arguments);
-      };
-    s.async = true;
-    s.src = "https://call.chatra.io/chatra.js";
-    if (d.head) d.head.appendChild(s);
-  })(document, window, "Chatra");
-</script>
+<script
+  src="//code.tidio.co/mk4s1ayikczgnnnzn4jydjwqakmseq9i.js"
+  async
+></script>
 <!-- /Chatra {/literal} -->
 <!DOCTYPE html>
 <html lang="en">
